# kafka-connect-config-example

./: .env  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
seed/: pg.sql
test/: conftest.py  ride.feature
test/steps/: db.py
