[tool.poetry]
name = "kafka-connect-config-example"
version = "0.1.0"
description = ""
authors = ["Dheker Labidi <dheker.labidi@free-now.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.25"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"


[tool.poetry.group.test.dependencies]
behave = "^1.2.6"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
